calc mean housing units

--- a/Starter_Code/rental_analysis.ipynb
+++ b/Starter_Code/rental_analysis.ipynb
@@ -290,108 +290,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>sale_price_sqr_foot</th>\n",
-       "      <th>gross_rent</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>year</th>\n",
-       "      <th>housing_units</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2010</th>\n",
-       "      <th>372560</th>\n",
-       "      <td>369.344353</td>\n",
-       "      <td>1239</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011</th>\n",
-       "      <th>374507</th>\n",
-       "      <td>341.903429</td>\n",
-       "      <td>1530</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012</th>\n",
-       "      <th>376454</th>\n",
-       "      <td>399.389968</td>\n",
-       "      <td>2324</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013</th>\n",
-       "      <th>378401</th>\n",
-       "      <td>483.600304</td>\n",
-       "      <td>2971</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014</th>\n",
-       "      <th>380348</th>\n",
-       "      <td>556.277273</td>\n",
-       "      <td>3528</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015</th>\n",
-       "      <th>382295</th>\n",
-       "      <td>632.540352</td>\n",
-       "      <td>3739</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016</th>\n",
-       "      <th>384242</th>\n",
-       "      <td>697.643709</td>\n",
-       "      <td>4390</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                    sale_price_sqr_foot  gross_rent\n",
-       "year housing_units                                 \n",
-       "2010 372560                  369.344353        1239\n",
-       "2011 374507                  341.903429        1530\n",
-       "2012 376454                  399.389968        2324\n",
-       "2013 378401                  483.600304        2971\n",
-       "2014 380348                  556.277273        3528\n",
-       "2015 382295                  632.540352        3739\n",
-       "2016 384242                  697.643709        4390"
+       "year\n",
+       "2010    372560\n",
+       "2011    374507\n",
+       "2012    376454\n",
+       "2013    378401\n",
+       "2014    380348\n",
+       "2015    382295\n",
+       "2016    384242\n",
+       "Name: housing_units, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the mean number of housing units per year (hint: use groupby) \n",
-    "mean_housing_units = sfo_data.groupby([\"year\", \"housing_units\"]).mean()\n",
+    "mean_housing_units = sfo_data.groupby(\"year\")[\"housing_units\"].mean()\n",
     "mean_housing_units"
    ]
   },
