--- a/Starter_Code/dashboard.ipynb
+++ b/Starter_Code/dashboard.ipynb
@@ -309,9 +309,9 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python [conda env:pyvizenv25] *",
+   "display_name": "Python [conda env:pyvizenv] *",
    "language": "python",
-   "name": "conda-env-pyvizenv25-py"
+   "name": "conda-env-pyvizenv-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -323,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.10"
   },
   "mimetype": "text/x-python",
   "name": "python",
