added sunburst and some panels

--- a/Starter_Code/dashboard.ipynb
+++ b/Starter_Code/dashboard.ipynb
@@ -90,7 +90,17 @@
     "def housing_units_per_year():\n",
     "    \"\"\"Housing Units Per Year.\"\"\"\n",
     "    \n",
-    "    # YOUR CODE HERE!\n",
+    "mean_housing_units_plot = mean_housing_units.plot.bar(\n",
+    "    ylim=(370000, 387500), \n",
+    "    figsize=(20,10), \n",
+    "    title=\"Housing Units in San Francisco From 2010 to 2016\", \n",
+    "    rot=45, \n",
+    "    fontsize=15, \n",
+    "    xlabel=\"Year\", \n",
+    "    ylabel=\"Housing Units\"\n",
+    ")\n",
+    "mean_housing_units_plot\n",
+    "\n",
     "\n",
     "\n",
     "def average_gross_rent():\n",
@@ -103,54 +113,152 @@
     "def average_sales_price():\n",
     "    \"\"\"Average Sales Price Per Year.\"\"\"\n",
     "    \n",
-    "    # YOUR CODE HERE!\n",
+    "     mean_sale_price_per_sq_foot = sfo_data.groupby([\"year\"])[\"gross_rent\"].mean()\n",
+    "mean_sale_price_per_sq_foot.plot(\n",
+    "    ylim=(1200, 4500), \n",
+    "    figsize=(20,10), \n",
+    "    title=\"Average Monthly Rent By Year\", \n",
+    "    rot=45, \n",
+    "    fontsize=15, \n",
+    "    xlabel=\"Year\", \n",
+    "    ylabel=\"Monthly Rent\",\n",
+    "    color=\"blue\"\n",
+    ")\n",
     "\n",
     "\n",
     "\n",
     "def average_price_by_neighborhood():\n",
     "    \"\"\"Average Prices by Neighborhood.\"\"\"\n",
     "    \n",
-    "    # YOUR CODE HERE!\n",
+    "    average_monthly_rent = mean_prices_for_year_and_neighborhood.hvplot(\n",
+    "    x=\"year\",\n",
+    "    y=\"gross_rent\",\n",
+    "    kind=\"line\",\n",
+    "    ylabel=\"Average Monthly Rent\",\n",
+    "    groupby=\"neighborhood\",\n",
+    "    color=\"pink\"\n",
+    ")\n",
     "\n",
     "\n",
     "\n",
     "def top_most_expensive_neighborhoods():\n",
     "    \"\"\"Top 10 Most Expensive Neighborhoods.\"\"\"\n",
     "\n",
-    "    # YOUR CODE HERE!\n",
+    "    top_10_expensive_plot = top_10_expensive.plot.bar(\n",
+    "    x=\"neighborhood\",\n",
+    "    y=\"sale_price_sqr_foot\",\n",
+    "    ylim=(600, 1000), \n",
+    "    figsize=(20,10), \n",
+    "    title=\"Top 10 Expensive Neighborhoods in San Francisco\", \n",
+    "    rot=45, \n",
+    "    fontsize=15, \n",
+    "    xlabel=\"Top 10 Expensive Neighborhoods\", \n",
+    "    ylabel=\"Average Sale Price Per Square Foot\",\n",
+    ")\n",
     "\n",
     "\n",
     "def most_expensive_neighborhoods_rent_sales():\n",
     "    \"\"\"Comparison of Rent and Sales Prices of Most Expensive Neighborhoods.\"\"\"   \n",
     "    \n",
-    "    # YOUR CODE HERE!\n",
+    "    new_top_10_expensive_neighborhoods_plot = new_top_10_expensive_neighborhoods.hvplot.bar(\n",
+    "    x=\"year\",\n",
+    "    y=[\"gross_rent\", \"sale_price_sqr_foot\"],\n",
+    "    groupby=\"neighborhood\",\n",
+    "    value_label=\"Num Housing Units\",\n",
+    "    xlabel=\"Neighborhood\",\n",
+    "    stacked=False,\n",
+    "    rot=70,\n",
+    "    width=800,\n",
+    "    height=400,\n",
+    "    title=\"SFO Comparison Of Average Price Per Square Foot VS Average Montly Rent By Year\"\n",
+    ")\n",
     "\n",
     "    \n",
     "    \n",
     "def parallel_coordinates():\n",
     "    \"\"\"Parallel Coordinates Plot.\"\"\"\n",
     "\n",
-    "    # YOUR CODE HERE!\n",
+    "    parallel_coordinates_plot = px.parallel_coordinates(\n",
+    "    top_10_expensive, \n",
+    "    dimensions=[\n",
+    "        \"sale_price_sqr_foot\", \n",
+    "        \"housing_units\",\n",
+    "        \"gross_rent\"\n",
+    "    ],\n",
+    "    color=\"sale_price_sqr_foot\",\n",
+    "    color_continuous_scale=px.colors.diverging.Tealrose,\n",
+    "    height=400,\n",
+    "    width=1300,\n",
+    "    labels={\n",
+    "        'sale_price_sqr_foot':'Sale Price Per Square Foot', \n",
+    "        'housing_units':'Housing Units',\n",
+    "        'gross_rent':'Gross Rent'\n",
+    "    }\n",
+    ")\n",
     "\n",
     "\n",
     "\n",
     "def parallel_categories():\n",
     "    \"\"\"Parallel Categories Plot.\"\"\"\n",
     "    \n",
-    "    # YOUR CODE HERE!\n",
+    "    parallel_categories_plot = px.parallel_categories(\n",
+    "    top_10_expensive, \n",
+    "    dimensions=[\n",
+    "        \"neighborhood\", \n",
+    "        \"sale_price_sqr_foot\", \n",
+    "        \"housing_units\",\n",
+    "        \"gross_rent\"\n",
+    "    ],\n",
+    "    color=\"sale_price_sqr_foot\",\n",
+    "    color_continuous_scale=px.colors.diverging.Tealrose,\n",
+    "    height=400,\n",
+    "    width=1300,\n",
+    "    labels={\n",
+    "        'neighborhood':'Neighborhood', \n",
+    "        'sale_price_sqr_foot':'Sale Price Per Square Foot', \n",
+    "        'housing_units':'Housing Units',\n",
+    "        'gross_rent':'Gross Rent'\n",
+    "    }\n",
+    ")\n",
     "\n",
     "\n",
     "\n",
     "def neighborhood_map():\n",
     "    \"\"\"Neighborhood Map.\"\"\"\n",
     "\n",
-    "    # YOUR CODE HERE!\n",
+    "    neighborhood_scatter_mapbox = px.scatter_mapbox(\n",
+    "    joined_sfo_data_with_coordinates, \n",
+    "    lat=\"Lat\", \n",
+    "    lon=\"Lon\",     \n",
+    "    color=\"gross_rent\", \n",
+    "    size=\"sale_price_sqr_foot\",\n",
+    "    title=\"Average Sale Price Per Square Foot and Gross Rent In San Francisco\",\n",
+    "    color_continuous_scale=px.colors.sequential.Bluered, \n",
+    "    hover_name=\"neighborhood\",\n",
+    "    size_max=15,\n",
+    "    zoom=10,\n",
+    "    width=1000, \n",
+    "    height=1000\n",
+    ")\n",
     "\n",
     "\n",
     "def sunburst():\n",
     "    \"\"\"Sunburst Plot.\"\"\"\n",
     "    \n",
-    "    # YOUR CODE HERE!\n"
+    "    df_expensive_neighborhoods_per_year_sunburst = px.sunburst(\n",
+    "        df_expensive_neighborhoods_per_year, \n",
+    "        path=[\n",
+    "            'year', \n",
+    "            'neighborhood'\n",
+    "        ], \n",
+    "        values='sale_price_sqr_foot',\n",
+    "        color='gross_rent', \n",
+    "        title=\"Costs Analysis of Most Expensive Neighborhoods in San Francisco Per Year\",\n",
+    "        color_continuous_scale=px.colors.sequential.Blackbody,\n",
+    "        width=800,\n",
+    "        height=800\n",
+    "    )\n",
+    "\n"
    ]
   },
   {
